# NLP-UR5-Robot-with-ROS-2-Docker-DEMO

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
install/: local_setup.sh  setup.sh
install/llm_robot_control/lib/llm_robot_control/: llm_interface_node.py  llm_robot_master.py
install/llm_robot_control/share/llm_robot_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/llm_robot_control/share/llm_robot_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_llm_robot_control__rosidl_generator_cExport-noconfig.cmake  export_llm_robot_control__rosidl_generator_cExport.cmake  export_llm_robot_control__rosidl_generator_cppExport.cmake  export_llm_robot_control__rosidl_generator_pyExport.cmake  export_llm_robot_control__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_llm_robot_control__rosidl_typesupport_fastrtps_cppExport.cmake  llm_robot_control__rosidl_typesupport_cExport-noconfig.cmake  llm_robot_control__rosidl_typesupport_cppExport-noconfig.cmake  llm_robot_control__rosidl_typesupport_introspection_cExport.cmake  llm_robot_control__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/llm_robot_control/share/llm_robot_control/msg/: RobotCommand.idl  SafetyStatus.idl
install/moveit_resources/share/moveit_resources/: local_setup.sh  package.sh
install/moveit_resources_fanuc_description/share/moveit_resources_fanuc_description/: package.sh
install/moveit_resources_fanuc_moveit_config/share/moveit_resources_fanuc_moveit_config/: local_setup.sh  package.sh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: local_setup.sh  package.sh
install/moveit_resources_panda_moveit_config/share/moveit_resources_panda_moveit_config/: package.sh
log/: latest_build
src/llm_robot_control/: CMakeLists.txt
src/llm_robot_control/config/: ros2_controllers.yaml
src/llm_robot_control/launch/: llm_robot_system.launch.py
src/llm_robot_control/msg/: RobotCommand.msg
src/llm_robot_control/scripts/: llm_interface_node.py  motion_executor_node.py  safety_validator_node.py
(+36 files in other folders)
